# the-retrievers

./: .gitmodules
firmware/: .clang-format  .pre-commit-config.yaml  README.md  flake.nix
firmware/Servo/: CMakeLists.txt
firmware/esp32/: CMakeLists.txt
firmware/ground-station/ai-thinker/: CMakeLists.txt  Makefile  README.md  arm-toolchain.cmake  flake.nix  tremo_loader.py
firmware/ground-station/ai-thinker-to-computer-parser/: CMakeLists.txt
firmware/ground-station/ai-thinker-to-computer-parser/inc/: serial.h
firmware/ground-station/ai-thinker/exes/full-receiver-test/: main.c  tremo_it.c
firmware/ground-station/ai-thinker/exes/full-sender-test/: main.c
firmware/ground-station/ai-thinker/exes/main/: main.c
firmware/ground-station/ai-thinker/exes/receiver-test/: main.c
firmware/ground-station/ai-thinker/exes/sender-test/: main.c  tremo_it.c
firmware/ground-station/ai-thinker/impls/: loraImpl.c  utils.c
firmware/ground-station/ai-thinker/inc/: lora_config.h  printWrapper.h
firmware/ground-station/ai-thinker/src/: lora_config.c  printWrapper.c
firmware/lora/lora-board/: CMakeLists.txt  Makefile  Readme.md  flake.nix
firmware/lora/lora-board/inc/: global_lora.h  global_radio.h  init.h  psat_lora.h  psat_to_esp_uart_config.h  sm_types.h
firmware/lora/lora-board/inc/packets/: packets.h
firmware/lora/lora-board/src/: ground_lora.c  init.c  main.c  psat_lora.c  radio_lora_standalone.c  sm_types.c
firmware/lora/lora-board/src/ground_station/: main.c
firmware/lora/lora-board/src/packets/: packets.c
firmware/lora/lora-board/src/psat_station/: main.c  pdr_firmware.c  uart_to_esp32_config.h
firmware/platform-agnostic-testing/: CMakeLists.txt  README.md
firmware/platform-agnostic-testing/impls/: loraImpl.c  utils.c
firmware/platform-agnostic-testing/test_helpers/: loraImpl_testing_config.h  test_helpers.c  test_helpers.h
firmware/platform-agnostic-testing/tests/: 001-lora_wrapper_functionality_test.c  002-lora_tx_timeout_test.c  003-lora_rx_packet_loss_test.c  004-lora_rx_inter_packet_timeout_test.c  005-lora_rx_corruption_test.c
firmware/psat-station/: .cspell.json  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  flake.nix
firmware/psat-station/components/ADXL345/: main.c
firmware/psat-station/components/ADXL345/include/: main.h
firmware/psat-station/components/ADXL375/: main.c
firmware/psat-station/components/ADXL375/include/: main.h
firmware/psat-station/components/BMP280/: BMP280.c  CMakeLists.txt  main.c
firmware/psat-station/components/BMP280/include/: BMP280.h  main.h
firmware/psat-station/components/I2C/: CMakeLists.txt  I2C.c  main.c
firmware/psat-station/components/I2C/include/: I2C.h  main.h
firmware/psat-station/components/battery/: CMakeLists.txt  battery.c
firmware/psat-station/components/battery/include/: battery.h
firmware/psat-station/components/bmp280/: CMakeLists.txt  bmp280.c
firmware/psat-station/components/bmp280/include/: BMP280.h
firmware/psat-station/components/buttons/: CMakeLists.txt  buttons.c
firmware/psat-station/components/buttons/include/: buttons.h
firmware/psat-station/components/buzzers/: CMakeLists.txt  buzzer.c
firmware/psat-station/components/buzzers/include/: buzzer.h
firmware/psat-station/components/buzzers/test/: CMakeLists.txt  test_audio.c
firmware/psat-station/components/config/: CMakeLists.txt  pin_config.c
firmware/psat-station/components/config/include/: pin_config.h
firmware/psat-station/components/fsm/: CMakeLists.txt  components.c  errors.c  on_entry_handlers.c  on_exit_handlers.c  register_components.c  sm.c  state_handlers.c  states.c
firmware/psat-station/components/fsm/include/: components.h  errors.h  on_entry_handlers.h  on_exit_handlers.h  register_components.h  sm.h  state_handlers.h  states.h
firmware/psat-station/components/gps/: CMakeLists.txt  gps_data.c  gps_driver.c  minmea.c
firmware/psat-station/components/gps/include/: gps_data.h  gps_driver.h  minmea.h
firmware/psat-station/components/helpers/: helpers.c
firmware/psat-station/components/helpers/include/: helpers.h
firmware/psat-station/components/ldr/: CMakeLists.txt  ldr.c  ldr_task.c
firmware/psat-station/components/ldr/include/: ldr.h  ldr_task.h
firmware/psat-station/components/ldr/test/: CMakeLists.txt  test.c  test_ldr.c
firmware/psat-station/components/lora/: CMakeLists.txt  shared_lora.c
firmware/psat-station/components/lora/include/: shared_lora.h
firmware/psat-station/components/loraCfg/: main.c
firmware/psat-station/components/loraCfg/include/: loraCfg.h
firmware/psat-station/components/loraFsm/: CMakeLists.txt  loraFsm.c  packets.c
firmware/psat-station/components/loraFsm/include/: loraFsm.h  packets.h
firmware/psat-station/components/loraHal/: CMakeLists.txt  idf_component.yml  loraHal.c
firmware/psat-station/components/loraHal/include/: loraHal.h  loraHal_boardCfg.h  loraHal_regs.h  loraRegs.h
firmware/psat-station/components/loraImpl/: CMakeLists.txt  loraImpl.c
firmware/psat-station/components/loraImpl/include/: loraImpl.h  loraImpl_cfgToRegs.h
firmware/psat-station/components/servo/: servo.c
firmware/psat-station/components/servo/include/: servo.h
firmware/psat-station/components/servo/test/: test_servo.c
firmware/psat-station/components/timers/: CMakeLists.txt  timers.c
firmware/psat-station/components/timers/include/: timers.h
firmware/psat-station/components/utilsImpl/: CMakeLists.txt  utilsImpl.c
firmware/psat-station/components/utilsImpl/include/: utilsImpl.h
firmware/psat-station/ldr/: CMakeLists.txt  ldr.c
firmware/psat-station/ldr/include/: ldr.h
firmware/psat-station/ldr/main/: CMakeLists.txt  ldr.c
firmware/psat-station/main/: CMakeLists.txt  psat-station.c
firmware/psat-station/main/fsm/: psat_fsm.h
firmware/psat-station/test/: CMakeLists.txt
firmware/psat-station/test/main/: CMakeLists.txt  psat_station_test.c  unit_test
kicad/: flake.nix  pcbway.kicad_dru
pdr-firmware-archived/: .gitignore
presentation-files/: Lora-State-Machine.excalidraw  esp32-s3_datasheet_en.xlsx
(+315 files in other folders)
